# zecbox

./: .dockerignore  .gitignore  BLOCKERS.md  Cargo.toml  Dockerfile.linux-test  LICENSE  README.md  docker-compose.linux-test.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-app.yml  deploy-site.yml  publish-binaries.yml  test-linux.yml
firewall-helper/: Cargo.toml
firewall-helper/src/: iptables.rs  main.rs  pf.rs  redirector.rs  service.rs  socks5.rs  windivert_fw.rs
mock-arti/: Cargo.toml
mock-arti/src/: main.rs
mock-wireguard/: Cargo.toml
mock-wireguard/src/: main.rs
mock-zaino/: Cargo.toml
mock-zaino/src/: main.rs
mock-zebrad/: Cargo.toml
mock-zebrad/src/: main.rs
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1  fetch-binaries.sh  generate-manifest.sh  test-linux-docker.sh
site/: astro.config.mjs  package-lock.json  package.json
site/.astro/: settings.json
site/public/: CNAME
site/public/updates/: app-darwin-aarch64.json  app-darwin-x86_64.json  manifest.json
site/src/components/: DashboardDemo.astro  Download.astro  Features.astro  Footer.astro  Hero.astro  Nav.astro  NetworkHealth.astro  ShieldMode.astro
site/src/layouts/: Base.astro
site/src/pages/: index.astro  network.astro
site/src/styles/: globals.css
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  platform.rs  providers.json  state.rs
src-tauri/src/commands/: logs.rs  mod.rs  network.rs  node.rs  onboarding.rs  privacy.rs  proxy.rs  settings.rs  shield.rs  storage.rs  updates.rs  wallet.rs
src-tauri/src/config/: app_config.rs  mod.rs  proxy_config.rs  zaino_config.rs  zebrad_config.rs
src-tauri/src/health/: mod.rs
src-tauri/src/network/: mod.rs
src-tauri/src/power/: linux.rs  macos.rs  mod.rs  wake_handler.rs  windows.rs
src-tauri/src/process/: mod.rs  platform.rs  wireguard.rs  zaino.rs  zebrad.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/tor/: dns.rs  firewall.rs  mod.rs
src-tauri/src/updates/: mod.rs
src/components/: ErrorBoundary.tsx
src/components/dashboard/: Dashboard.tsx  LiveLogPreview.tsx  NetworkPanel.tsx  NodeStatsPanel.tsx  NodeStatus.tsx  QuickActions.tsx  StatusIndicators.tsx  StorageBar.tsx  StoragePanel.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  TitleBar.tsx
src/components/logs/: LogViewer.tsx
src/components/network/: NetworkServe.tsx
src/components/onboarding/: Onboarding.tsx  Ready.tsx  ShieldSelect.tsx  StorageSelect.tsx  Welcome.tsx
src/components/privacy/: Privacy.tsx  ProviderDirectory.tsx  ProxySetup.tsx  ProxyStatus.tsx  StealthStatus.tsx
src/components/settings/: Settings.tsx
src/components/shared/: InfoTip.tsx
src/components/shield/: ShieldMode.tsx
src/components/wallet/: WalletServer.tsx
src/hooks/: useLogs.ts  useNetworkServe.ts  useNodeStatus.ts  usePrivacyMode.ts  useProxyMode.ts  useShieldMode.ts  useStealthMode.ts  useStorage.ts  useUpdates.ts  useWalletServer.ts
src/lib/: format.ts  logParser.ts  tauri.ts  types.ts
src/styles/: globals.css
tools/manifest-signer/: Cargo.toml
tools/manifest-signer/src/: main.rs
tools/relay/: Dockerfile  docker-compose.template.yml  entrypoint.sh
