[package]
name = "firewall-helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zecbox-firewall-helper"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
