[package]
name = "zecbox"
version = "0.1.4"
description = "One-click Zcash full node"
edition = "2021"

[lib]
name = "zecbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
dirs = "6"
nix = { version = "0.29", features = ["signal", "process"] }
sysinfo = "0.33"
log = "0.4"
env_logger = "0.11"
qrcode = "0.14"
base64 = "0.22"
sha2 = "0.10"
tauri-plugin-updater = "2"
core-foundation = "0.10"
chrono = { version = "0.4.44", features = ["serde"] }
igd-next = { version = "0.17", features = ["aio_tokio"] }
