[package]
name = "manifest-signer"
version = "0.1.0"
edition = "2021"
description = "Keygen and manifest signing tool for ZecBox binary updates"

[[bin]]
name = "manifest-signer"
path = "src/main.rs"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
